feat: typed random users response api call and improved error handling